--- a/config/my_controllers.yaml
+++ b/config/my_controllers.yaml
@@ -1,12 +1,12 @@
 controller_manager:
-  ros_parameters:
+  ros__parameters:
     update_rate: 30
     use_sim_time: true
 
-    diff_count:
+    diff_cont:
       type: diff_drive_controller/DiffDriveController
 
-    joint_board:
+    joint_broad:
       type: joint_state_broadcaster/JointStateBroadcaster
 
 diff_cont:
@@ -16,8 +16,8 @@ diff_cont:
 
     base_frame_id: base_link
 
-    left_wheel_names: ['left_wheel_joint']
-    right_wheel_names: ['right_wheel_joint']
+    left_wheel_names: ['left_front_wheel_joint', left_back_wheel_joint]
+    right_wheel_names: ['right_front_wheel_joint', right_back_wheel_joint]
     wheel_separation: 0.36
     wheel_radius: 0.068
 
